{
  "version": 4,
  "terraform_version": "1.2.4",
  "serial": 150,
  "lineage": "d2153d22-125f-c85b-5d82-0a6f39402bc6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "vprofileapp_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01b00b6482ae2109f",
            "arn": "arn:aws:ec2:ap-south-1:601810751098:instance/i-02bede22f17c2c217",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02bede22f17c2c217",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "bitidea",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0dbe5452417515908",
            "private_dns": "ip-10-0-1-11.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.11",
            "public_dns": "ec2-65-0-100-149.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.0.100.149",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a4c720e515f42870",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c3537e213875bb94",
            "tags": {
              "Name": "VprofileApp_Prod"
            },
            "tags_all": {
              "Name": "VprofileApp_Prod"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d1a31574c4dda4ec"
            ]
          },
          "dependencies": [
            "aws_security_group.public_sg",
            "aws_subnet.public_subnets",
            "aws_vpc.vprofileapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:601810751098:internet-gateway/igw-0951141ff85133feb",
            "id": "igw-0951141ff85133feb",
            "owner_id": "601810751098",
            "tags": {
              "Name": "VProfile-App-Igw"
            },
            "tags_all": {
              "Name": "VProfile-App-Igw"
            },
            "vpc_id": "vpc-0eb163b256818481a"
          },
          "dependencies": [
            "aws_vpc.vprofileapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "vprofile",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:601810751098:loadbalancer/app/vprofile-alb/a90ab706005b9c96",
            "arn_suffix": "app/vprofile-alb/a90ab706005b9c96",
            "desync_mitigation_mode": "defensive",
            "dns_name": "vprofile-alb-163548870.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:601810751098:loadbalancer/app/vprofile-alb/a90ab706005b9c96",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "vprofile-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0d1a31574c4dda4ec"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05b01e3d734581904"
              },
              {
                "subnet_id": "subnet-0c3537e213875bb94"
              }
            ],
            "subnets": [
              "subnet-05b01e3d734581904",
              "subnet-0c3537e213875bb94"
            ],
            "vpc_id": "vpc-0eb163b256818481a",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.public_sg",
            "aws_subnet.public_subnets",
            "aws_vpc.vprofileapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "vprofile",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:601810751098:listener/app/vprofile-alb/a90ab706005b9c96/4ec3968e7f64d2ef",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:601810751098:targetgroup/vprofile-target-group/cc075f43c9633ffe",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:601810751098:listener/app/vprofile-alb/a90ab706005b9c96/4ec3968e7f64d2ef",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:601810751098:loadbalancer/app/vprofile-alb/a90ab706005b9c96",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.vprofile",
            "aws_lb_target_group.vprofile",
            "aws_security_group.public_sg",
            "aws_subnet.public_subnets",
            "aws_vpc.vprofileapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "vprofile",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:601810751098:targetgroup/vprofile-target-group/cc075f43c9633ffe",
            "arn_suffix": "targetgroup/vprofile-target-group/cc075f43c9633ffe",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-299",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:601810751098:targetgroup/vprofile-target-group/cc075f43c9633ffe",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "vprofile-target-group",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0eb163b256818481a"
          },
          "dependencies": [
            "aws_vpc.vprofileapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "vprofile",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:601810751098:targetgroup/vprofile-target-group/cc075f43c9633ffe-20230711140923631000000006",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:601810751098:targetgroup/vprofile-target-group/cc075f43c9633ffe",
            "target_id": "i-02bede22f17c2c217"
          },
          "dependencies": [
            "aws_instance.vprofileapp_instance",
            "aws_lb_target_group.vprofile",
            "aws_security_group.public_sg",
            "aws_subnet.public_subnets",
            "aws_vpc.vprofileapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:601810751098:route-table/rtb-0b7130ff441092fa6",
            "id": "rtb-0b7130ff441092fa6",
            "owner_id": "601810751098",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0951141ff85133feb",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "VProfile-App-RouteTable"
            },
            "tags_all": {
              "Name": "VProfile-App-RouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eb163b256818481a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_vpc.vprofileapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e5bc15908882bbfb",
            "route_table_id": "rtb-0b7130ff441092fa6",
            "subnet_id": "subnet-0c3537e213875bb94"
          },
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_route_table.my_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.vprofileapp_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd5391508b093f42",
            "route_table_id": "rtb-0b7130ff441092fa6",
            "subnet_id": "subnet-05b01e3d734581904"
          },
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_route_table.my_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.vprofileapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:601810751098:security-group/sg-0948649df09600e20",
            "description": "Security group for private instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0948649df09600e20",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Vprofile-PrivateSecurityGroup",
            "name_prefix": "",
            "owner_id": "601810751098",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Vprofile-PrivateSecurityGroup"
            },
            "tags_all": {
              "Name": "Vprofile-PrivateSecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eb163b256818481a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vprofileapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:601810751098:security-group/sg-0d1a31574c4dda4ec",
            "description": "Security group for public instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d1a31574c4dda4ec",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "Vprofile-PublicSecurityGroup",
            "name_prefix": "",
            "owner_id": "601810751098",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Vprofile-PublicSecurityGroup"
            },
            "tags_all": {
              "Name": "Vprofile-PublicSecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eb163b256818481a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vprofileapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:601810751098:subnet/subnet-0ccae1ece94016498",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ccae1ece94016498",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "601810751098",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VProfileApp-PrivateSubnet-0"
            },
            "tags_all": {
              "Name": "VProfileApp-PrivateSubnet-0"
            },
            "vpc_id": "vpc-0eb163b256818481a"
          },
          "dependencies": [
            "aws_vpc.vprofileapp_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:601810751098:subnet/subnet-03bc27095e509cfa8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03bc27095e509cfa8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "601810751098",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VProfileApp-PrivateSubnet-1"
            },
            "tags_all": {
              "Name": "VProfileApp-PrivateSubnet-1"
            },
            "vpc_id": "vpc-0eb163b256818481a"
          },
          "dependencies": [
            "aws_vpc.vprofileapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:601810751098:subnet/subnet-0c3537e213875bb94",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c3537e213875bb94",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "601810751098",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VprofileApp-PublicSubnet-0"
            },
            "tags_all": {
              "Name": "VprofileApp-PublicSubnet-0"
            },
            "vpc_id": "vpc-0eb163b256818481a"
          },
          "dependencies": [
            "aws_vpc.vprofileapp_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:601810751098:subnet/subnet-05b01e3d734581904",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05b01e3d734581904",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "601810751098",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VprofileApp-PublicSubnet-1"
            },
            "tags_all": {
              "Name": "VprofileApp-PublicSubnet-1"
            },
            "vpc_id": "vpc-0eb163b256818481a"
          },
          "dependencies": [
            "aws_vpc.vprofileapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vprofileapp_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:601810751098:vpc/vpc-0eb163b256818481a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-017306cbbb101b75a",
            "default_route_table_id": "rtb-092e61444dce6961b",
            "default_security_group_id": "sg-04423706a54210739",
            "dhcp_options_id": "dopt-060c429f083e05f21",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0eb163b256818481a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-092e61444dce6961b",
            "owner_id": "601810751098",
            "tags": {
              "Name": "VProfile-App-Vpc"
            },
            "tags_all": {
              "Name": "VProfile-App-Vpc"
            }
          }
        }
      ]
    }
  ]
}